# substreams-raw-blocks

./: .gitignore  Cargo.toml  Makefile  README.md  metadata.json  rust-toolchain.toml  schema.clickhouse.sql  schema.graphql  schema.sql  subgraph.eos.yaml  subgraph.wax.yaml  subgraph.yaml  substreams-sink-entity-changes-v1.3.3.spkg  substreams.yaml
.github/workflows/: substreams.yml  test.yml
blocks/antelope/: Cargo.toml  Makefile  README.md  schema.sql  substreams.yaml
blocks/antelope/src/: account_ram_deltas.rs  actions.rs  auth_sequences.rs  authority.rs  authorizations.rs  blocks.rs  collect_events.rs  creation_flat_nodes.rs  creation_tree.rs  db_ops.rs  events.rs  feature_ops.rs  keys.rs  lib.rs  map_events.rs  perm_ops.rs  ram_ops.rs  sinks.rs  size.rs  storage_changes.rs  table_ops.rs  traces.rs  transactions.rs
blocks/antelope/src/pb/: antelope.rs  mod.rs  pinax.antelope.v1.rs
blocks/arweave/: Cargo.toml  Makefile  README.md  substreams.yaml
blocks/beacon/: Cargo.toml  Makefile  README.md  schema.sql  substreams.yaml
blocks/beacon-parquet/: Cargo.toml  Makefile  substreams.yaml
blocks/bitcoin/: Cargo.toml  Makefile  README.md  substreams.yaml
blocks/bitcoin/src/: blocks.rs  events.rs  inputs.rs  lib.rs  outputs.rs  transactions.rs
blocks/bitcoin/src/pb/: bitcoin.rs  mod.rs  pinax.bitcoin.rs  pinax.bitcoin.v1.rs  sf.substreams.rpc.v2.rs  utxo.rs
blocks/cosmos/: Cargo.toml  Makefile  README.md  schema.sql  substreams.yaml
blocks/cosmos-parquet/: Cargo.toml  Makefile  substreams.yaml
blocks/cosmos-parquet/proto/: cosmos.rawblocks.proto
blocks/cosmos-parquet/src/: blocks.rs  consensus_param_updates.rs  events.rs  lib.rs  misbehaviors.rs  sinks.rs  size.rs  transaction_messages.rs  transactions.rs  utils.rs  validator_updates.rs
blocks/cosmos-parquet/src/pb/: cosmos.rawblocks.rs  cosmos.rawblocks.v1.rs  mod.rs
blocks/cosmos/src/: blocks.rs  collect_events.rs  consensus_param_updates.rs  events.rs  keys.rs  lib.rs  map_events.rs  misbehaviors.rs  sinks.rs  size.rs  transaction_messages.rs  transactions.rs  tx_and_block_events.rs  utils.rs  validator_updates.rs
blocks/cosmos/src/pb/: mod.rs  pinax.cosmos.v1.rs  sf.substreams.v1.rs
blocks/evm/: Cargo.toml  Makefile  README.md  schema-temp.sql  schema.snowflake.sql  schema.sql  substreams.yaml  test.py
blocks/evm-beacon/: Cargo.toml  substreams.yaml
blocks/evm-beacon/src/: blobs.rs  blocks.rs  lib.rs  sink.rs
blocks/evm/src/: account_creations.rs  balance_changes.rs  blocks.rs  code_changes.rs  creation_traces.rs  events.rs  gas_changes.rs  keccak_preimages.rs  keys.rs  lib.rs  logs.rs  nonce_changes.rs  sinks.rs  size.rs  storage_changes.rs  system_traces.rs  traces.rs  transactions.rs
blocks/evm/src/pb/: evm.rs  mod.rs  pinax.evm.v1.rs
blocks/near/: Cargo.toml  Makefile  README.md  substreams.yaml
blocks/near/src/: blocks.rs  map_events.rs
blocks/near/src/pb/: mod.rs  pinax.near.v1.rs
blocks/solana/: Cargo.toml  Makefile  README.md  schema.sql  substreams.yaml
blocks/solana-parquet/: Cargo.toml  Makefile  README.md  schema.sql  state.yaml  substreams.yaml
blocks/solana/src/: account_activity.rs  blocks.rs  blocks_without_votes_all.rs  collect_events.rs  counters.rs  events.rs  instruction_calls.rs  instructions.rs  keys.rs  lib.rs  rewards.rs  sinks.rs  size.rs  structs.rs  token_balances.rs  transactions.rs  tx_errors.rs  utils.rs
blocks/solana/src/pb/: mod.rs  pinax.solana.v1.rs  solana.rs
blocks/starknet/: Cargo.toml  Makefile  README.md  substreams.yaml
blocks/starknet/getblock/: startknet_getBlockWithReceipts.json
blocks/starknet/src/: blocks.rs  calls.rs  events.rs  lib.rs  map_events.rs  transactions.rs  utils.rs
blocks/starknet/src/pb/: mod.rs  pinax.starknet.rs  pinax.starknet.v1.rs  sf.starknet.type.v1.rs
chains/eos/: Makefile  metadata.json  subgraph.yaml  substreams.yaml
chains/wax/: Makefile  metadata.json  subgraph.yaml  substreams.yaml
common/: Cargo.toml
common/src/: blocks.rs  keys.rs  lib.rs  sinks.rs  structs.rs  utils.rs
docs/: action_filter_by_receiver.md  base_detail_logs.md  block_hash.md  block_ordinal_query.md  chains_sizes.md  data_visualization.md  duckdb_queries.md  export_to_parquet.md  filtering_actions_by_receiver.md  google_big_query.md  interpret_uint256.md  method_id.md  supported_networks.md  transactions_root.md  verifying_ethereum_firehose_blocks.md
graph-node/: docker-compose.yml  up.sh
graph-node/config/: substreams.toml
proto/: antelope.proto  arweave.proto  beacon.proto  bitcoin.proto  cosmos.proto  evm.proto  near.proto  sf.arweave.type.v1.proto  sf.beacon.type.v1.proto  sf.evm.type.v2.proto  sf.starknet.type.v1.proto  solana.proto  starknet.proto
proto/parquet/: options.proto
queries/: actions.graphql
sample/: block-1000.json  block-20293026.json
sample/ethereum/: RAW_DATA_BLOCKS.csv
snowflake/: base  eos
snowflake/antelope/: README.md
snowflake/arweave/: README.md
snowflake/beacon/: README.md
snowflake/bitcoin/: README.md
snowflake/cosmos/: README.md
snowflake/ethereum/: README.md
snowflake/evm/: README.md
snowflake/solana/: README.md
snowflake/starknet/: README.md
snowflake/wax/: README.md
src/: actions.rs  actions_clickhouse.rs  authorization.rs  authorization_clickhouse.rs  authorizations.rs  blocks.rs  blocks_clickhouse.rs  db_ops.rs  index.rs  keys.rs  lib.rs  maps.rs  receivers.rs  receivers_clickhouse.rs  sinks.rs  size.rs  transactions.rs  transactions_clickhouse.rs  utils.rs
src/clickhouse/: actions.rs  authorization.rs  authorizations.rs  mod.rs  (+5 more)
substreams/: Cargo.toml  substreams.yaml
(+71 files in other folders)
