[workspace]
members = [
  "blocks/evm",
  "blocks/antelope",
  "blocks/solana",
  "blocks/cosmos",
  "common",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
substreams = "0.6"
substreams-database-change = "2"
substreams-ethereum = "0.10"
substreams-antelope = "0.6"
substreams-solana = "0.14"
substreams-cosmos = "0.2"
# substreams-bitcoin = "1.0"
# substreams-near = "0.9"
