[workspace]
members = [
  "blocks/evm",
  "blocks/antelope",
  "blocks/cosmos",
  "blocks/beacon",
  "blocks/solana",
  "blocks/bitcoin",
  "blocks/starknet",
  "blocks/near",
  "blocks/arweave",
  "common",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
substreams = "0.6"
substreams-ethereum = "0.10"
substreams-antelope = "0.6"
substreams-solana = "0.14"
substreams-cosmos = "0.2"
substreams-bitcoin = "2.0"
# substreams-near = { git = "https://github.com/streamingfast/substreams-near.git" }
substreams-near = "0.10"
prost = "0.13"
prost-types = "0.13"
serde_json = "1.0"
# substreams-near = "0.9"
