[package]
name = "raw_blocks_cosmos_parquet"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../../common" }
substreams-cosmos = { workspace = true }
substreams-database-change = { workspace = true }
substreams = { workspace = true }
sha2 = "0.10.8"
serde_json = "1.0.1"
prost = "0.13"
prost-types = "0.13"
