[package]
name = "raw_blocks_cosmos"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../../common" }
substreams-solana = { workspace = true }
substreams-database-change = { workspace = true }
substreams = { workspace = true }
