[package]
name = "raw_blocks_evm"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../../common" }
substreams-ethereum = { workspace = true }
substreams = { workspace = true }
prost-types = { workspace = true }
prost = { workspace = true }
